--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -10,5 +10,9 @@
   <%= @project.description %>
 </p>
 
+<% if @tickets.any? %>
+  <%= render 'ticket_index', project: @project, tickets: @tickets %>
+<% end %>
+
 <%= link_to 'Edit', edit_project_path(@project) %> |
 <%= link_to 'Back', projects_path %>
