--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Ticket</h1>
 
-<%= render 'form', ticket: @ticket %>
+<%= render 'form', project: @project, ticket: @ticket %>
 
-<%= link_to 'Back', tickets_path %>
+<%= link_to 'Back', project_path(@project) %>
