--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,10 @@
   </head>
 
   <body>
+    <% flash.each do |name, message| %>
+      <%= content_tag :div, message, class: name %>
+    <% end %>
+    
     <%= link_to 'Home', root_path %> |
     <% if user_signed_in? %>
       <%= link_to 'Log out', destroy_user_session_path, method: :delete %>
@@ -15,6 +19,7 @@
       <%= link_to 'Log in', new_user_session_path %> |
       <%= link_to 'Sign up', new_user_registration_path %>
     <% end %>
+    
     <%= yield %>
   </body>
 </html>
