--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -1,6 +1,13 @@
+<h1>Ticket</h1>
+
 <p>
   <strong>Name:</strong>
   <%= @ticket.name %>
+</p>
+
+<p>
+  <strong>Author:</strong>
+  <%= @ticket.author.email %>
 </p>
 
 <p>
