--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -4,21 +4,20 @@
   <strong>Name:</strong>
   <%= @ticket.name %>
 </p>
-
 <p>
   <strong>Author:</strong>
   <%= @ticket.author.email %>
 </p>
-
 <p>
   <strong>Description:</strong>
   <%= @ticket.description %>
 </p>
-
 <p>
   <strong>Project:</strong>
   <%= @ticket.project.name %>
 </p>
 
-<%= link_to 'Edit', edit_project_ticket_path(@project, @ticket) %> |
+<% if user_signed_in? %>
+  <%= link_to 'Edit', edit_project_ticket_path(@project, @ticket) %> |
+<% end %>
 <%= link_to 'Back', project_path(@project) %>
