--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -17,7 +17,7 @@
   <%= @ticket.project.name %>
 </p>
 
-<% if user_signed_in? %>
+<% if user_signed_in? && @ticket.owner?(current_user) %>
   <%= link_to 'Edit', edit_project_ticket_path(@project, @ticket) %> |
 <% end %>
 <%= link_to 'Back', project_path(@project) %>
