--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,24 @@
   <head>
     <title>Helpdesk</title>
     <%= csrf_meta_tags %>
-
-    <%= stylesheet_link_tag    'application', media: 'all' %>
+    <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
   </head>
 
   <body>
+    <% flash.each do |name, message| %>
+      <%= content_tag :div, message, class: name %>
+    <% end %>
+    
+    <%= link_to 'Home', root_path %> |
+    <% if user_signed_in? %>
+      <%= current_user.email %> |
+      <%= link_to 'Log out', destroy_user_session_path, method: :delete %>
+    <% else %>
+      <%= link_to 'Log in', new_user_session_path %> |
+      <%= link_to 'Sign up', new_user_registration_path %>
+    <% end %>
+    
     <%= yield %>
   </body>
 </html>
