--- a/app/views/projects/_ticket_index.html.erb
+++ b/app/views/projects/_ticket_index.html.erb
@@ -1,29 +1,32 @@
 <h1>Tickets</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th colspan="2"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% tickets.each do |ticket| %>
-      <tr>
-        <td><%= ticket.name %></td>
-        <td><%= ticket.description %></td>
-        <td><%= link_to 'Show', project_ticket_path(project, ticket) %></td>
-        <td><%= link_to 'Edit', edit_project_ticket_path(project, ticket) %></td>
-        <td><%= link_to 'Destroy', project_ticket_path(project, ticket), method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
 <%= link_to 'New Ticket', new_project_ticket_path(project) %>
 
-<br>
+<% if tickets.any? %>
+  <table>
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Author</th>
+        <th>Description</th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
+  
+    <tbody>
+      <% tickets.each do |ticket| %>
+        <tr>
+          <td><%= ticket.name %></td>
+          <td><%= ticket.author.email %></td>
+          <td><%= ticket.description %></td>
+          <td><%= link_to 'Show', project_ticket_path(project, ticket) %></td>
+          <% if user_signed_in? && ticket.owner?(current_user) %>
+            <td><%= link_to 'Edit', edit_project_ticket_path(project, ticket) %></td>
+            <td><%= link_to 'Destroy', project_ticket_path(project, ticket),
+                  method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <% end %>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+<% end %>
